css/style.css
/*
#130b15;
*/

body {
    font-family: 'Roboto', sans-serif;
    -webkit-font-smoothing: antialiased;
}

.dark {
    background-color: #130b15;
    color: white;
}

.light {
    color: #130b15;
    background-color: white;
}

#background {
    width: 100%;
    height: 100%;
}

#name {
    font-size: 50px;
    font-weight: 100;
}

a {
    color: inherit;
}

a:hover {
    color: inherit;
    text-decoration: none;
}

.linked-in {
    font-size: 2em;
}

.pic {
    background-image: url(/css/test2.JPG);
    background-size: 100% auto;
    width: 200px;
    height: 200px;
    border-radius: 50% 50%;
    border: 2px solid white;
}

.btn-light {
    color: #130b15;
    background-color: white;
    ;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 300;
}

